@@ -1032,7 +1032,7 @@ ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2012 Keith Godfrey, Maxym Mykhalchuk
 
 ABOUTDIALOG_LICENSE_BUTTON=&License
 ABOUTDIALOG_CONTRIBUTORS=\
-    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by: \nZoltan Bartko, Volker Berlin, Didier Briel (development manager), Kim Bruning, Alex Buloichik (lead developer), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Ibai Lakunza Velasco, Guido Leenders, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and Michael Zakharov\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License)\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License)\n  VLDocking Framework 2.1.4 by VLSolutions (CeCILL License)\n  Hunspell by L\u00e1szl\u00f3 N\u00e9meth and others (LGPL License)\n  JNA by Todd Fast, Timothy Wall and others (LGPL License)\n  Swing-Layout 1.0.2 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License) \n  JAXB (GPLv2 + classpath exception)
+    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by: \nZoltan Bartko, Volker Berlin, Didier Briel (development manager), Kim Bruning, Alex Buloichik (lead developer), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Hans-Peter Jacobs, Ibai Lakunza Velasco, Guido Leenders, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and Michael Zakharov\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License)\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License)\n  VLDocking Framework 2.1.4 by VLSolutions (CeCILL License)\n  Hunspell by L\u00e1szl\u00f3 N\u00e9meth and others (LGPL License)\n  JNA by Todd Fast, Timothy Wall and others (LGPL License)\n  Swing-Layout 1.0.2 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License) \n  JAXB (GPLv2 + classpath exception)
 
 # LicenseDialog.java
 
@@ -1468,6 +1468,8 @@ MW_VIEW_MENU=&View
 MW_VIEW_MENU_DISPLAY_SEGMENT_SOURCES=Display &Source Segments
 
 MW_VIEW_MENU_MARK_NON_UNIQUE_SEGMENTS=Mark Non-&Unique Segments
+
+MW_VIEW_MENU_MARK_NOTED_SEGMENTS=Mark Segments &with Notes
 
 MW_VIEW_MENU_MODIFICATION_INFO=&Modification Info
 
