@@ -39,6 +39,7 @@ import javax.swing.text.StyleConstants;
 public final class Styles {
 
     public static final Color COLOR_GREEN = new Color(192, 255, 192);
+    public static final Color COLOR_NOTED = new Color(192, 255, 255);
     public static final Color COLOR_UNTRANSLATED = new Color(0xCC, 0xCC, 0xFF);
     public static final Color COLOR_TRANSLATED = new Color(255, 255, 153);
 
